--- a/2021-12-06/forms.html
+++ b/2021-12-06/forms.html
@@ -18,11 +18,11 @@
             <option value="Klaipeda">Klaipeda</option>
         </select><br>
     <h3>Programavimo kalba:</h3>
-        <input type="checkbox" id="C++" name="C++" value="C++">
+        <input type="checkbox" id="C++" name="lang[]" value="C++">
         <label for="C++"> C++</label><br>
-        <input type="checkbox" id="PHP" name="PHP" value="PHP">
+        <input type="checkbox" id="PHP" name="lang[]" value="PHP">
         <label for="PHP">PHP</label><br>
-        <input type="checkbox" id="Python" name="Python" value="Python">
+        <input type="checkbox" id="Python" name="lang[]" value="Python">
         <label for="Python">Python</label><br>
     <h4>Papildoma informacija:</h4>
         <label for="w3review"></label>
